# sofort

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
documentation/: MSSQL_SERVER_LINUX.md  MS_DJANGO.md
src/: manage.py  todo.py
src/_bootstrap/: apps.py
src/_bootstrap/management/commands/: auto_create_superuser.py  sample_data.py
src/_bootstrap/management/presets/: interest_groups.csv  members.csv  questions.csv  settings.csv  tags.csv
src/_templates/default/: base.jinja2  datatable.jinja2  editor.jinja2  sidebar.jinja2
src/_templates/default/core/: index.jinja2
src/_templates/default/factories/: basics.jinja2  cards.jinja2  chat.jinja2  chats.jinja2  datatables.jinja2  elements.jinja2  entry.jinja2  images.jinja2  rows.jinja2  sidebars.jinja2  toolbars.jinja2
src/core/: admin.py  context.py  fields.py  layout.py  models.py  tests.py  urls.py  views.py
src/core/migrations/: 0001_initial.py
src/interests/: admin.py  context.py  models.py  urls.py  views.py
src/interests/migrations/: 0001_initial.py
src/members/: context.py  models.py
src/members/migrations/: 0001_initial.py
src/pages/: admin.py  models.py  urls.py  views.py
src/pages/migrations/: 0001_initial.py
src/questions/: admin.py  models.py  urls.py  views.py
src/questions/migrations/: 0001_initial.py
src/sofort/: asgi.py  globals.py  jinja2.py  settings.py  urls.py  wsgi.py
src/sofort/settings/: am.py  common.py  local.py  mssql.py  postgres.py  sqlite3.py
src/tags/: models.py
src/tags/migrations/: 0001_initial.py
src/templates/default/: base.html
(+88 files in other folders)
