[tool.poetry]
name = "sofort"
version = "0.1.0"
description = "SOftware FORum Tool"
authors = ["Yves Vindevogel <yves@vindevogel.net>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"
mssql-django = "^1.1.3"
psycopg2-binary = "^2.9.3"
django-filebrowser = "^4.0.1"
lessc = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
